--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="./GMTKGameJam.exe"
+export_path="./Loop-Bee-Loop.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -34,14 +34,14 @@ codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PackedStringArray()
 application/modify_resources=true
-application/icon=""
+application/icon="uid://flne8b5ixd1w"
 application/console_wrapper_icon=""
 application/icon_interpolation=4
 application/file_version=""
 application/product_version=""
-application/company_name=""
-application/product_name=""
-application/file_description=""
+application/company_name="Ryan Siegel-Stechler"
+application/product_name="Loop-Bee-Loop"
+application/file_description="Submission for GMTK 2025"
 application/copyright=""
 application/trademarks=""
 application/export_angle=0
